--- a/packages/ui/src/lib/ui.css
+++ b/packages/ui/src/lib/ui.css
@@ -39,7 +39,7 @@
 	--theme-color-neutral: var(--color-slate-500);
 	--theme-color-primary: var(--color-blue-500);
 	--theme-color-secondary: var(--color-rose-500);
-	--theme-color-accent: var(--color-green-500);
+	--theme-color-accent: var(--color-emerald-500);
 
 	/* fonts */
 	--theme-font: var(--font-asta);
