fix: downgrade tailwindcss to fix `@reference`

--- a/packages/ui/src/lib/css/1-theme/radii.css
+++ b/packages/ui/src/lib/css/1-theme/radii.css
@@ -1,4 +1,4 @@
-@theme inline {
+@theme {
 	/* radius */
 	--radius-base: var(--theme-radius-base, var(--theme-radius, var(--radius-xl, 0)));
 	--radius-box: var(--theme-radius-box, var(--theme-radius, var(--radius-xl, 0)));
